--- a/index.html
+++ b/index.html
@@ -35,25 +35,25 @@
   </header>
 
   <nav class="nav-tabs">
-    <button class="tab-button active">🏠 Home</button>
-    <button class="tab-button">📈 Track</button>
-    <button class="tab-button">🎁 Rewards</button>
-    <button class="tab-button">💎 Premium</button>
-    <button class="tab-button">👤 Profile</button>
+    <button class="tab-button active" data-tab="home">🏠 Home</button>
+    <button class="tab-button" data-tab="track">📈 Track</button>
+    <button class="tab-button" data-tab="rewards">🎁 Rewards</button>
+    <button class="tab-button" data-tab="premium">💎 Premium</button>
+    <button class="tab-button" data-tab="profile">👤 Profile</button>
   </nav>
 
   <main>
-    <section class="tab-content home" style="display:block;">
+    <section class="tab-content home" data-tab="home">
       <div class="card-grid">
         <div class="card green">
           <h3>Claim XP</h3>
           <p>Daily XP bonus</p>
-          <button>Claim</button>
+          <button id="claimXpBtn">Claim</button>
         </div>
         <div class="card dark">
           <h3>Buy Token</h3>
           <p>Pre-launch $WARP</p>
-          <button>Buy Now</button>
+          <button id="buyTokenBtn">Buy Now</button>
         </div>
         <div class="card dark">
           <h3><span id="currentXP">🔥 87 XP</span></h3>
@@ -63,8 +63,8 @@
         <div class="card purple">
           <h3>💎 Premium Tools</h3>
           <div class="btn-row">
-            <button>Claim another address</button>
-            <button>Track random wallet</button>
+            <button id="claimAddressBtn">Claim another address</button>
+            <button id="trackRandomBtn">Track random wallet</button>
           </div>
         </div>
         <div class="card full journey">
@@ -78,32 +78,32 @@
       </div>
     </section>
 
-    <section class="tab-content" style="display:none;">
+    <section class="tab-content track" data-tab="track">
       <div class="hero">
-        <h2 style="font-size:1.2rem;">📈 Onchain Tracker</h2>
+        <h2>📈 Onchain Tracker</h2>
         <p class="subtitle">Track your own wallet activity</p>
       </div>
       <div class="card-grid">
         <div class="card blue">
           <h3>Latest Activity</h3>
-          <p>Ex Bought Token on Zora</p>
-          <small>+ $5.23 Win</small>
+          <p id="latestActivity">Ex Bought Token on Zora</p>
+          <small id="activityResult">+ $5.23 Win</small>
         </div>
         <div class="card dark">
           <h3>Tokens Minted</h3>
-          <p>23 st</p>
+          <p id="tokensMinted">23 st</p>
         </div>
         <div class="card dark">
           <h3>ETH Moved</h3>
-          <p>1.65 ETH total</p>
+          <p id="ethMoved">1.65 ETH total</p>
         </div>
         <div class="card dark">
           <h3>Gas Spent</h3>
-          <p>0.14 ETH (~$42)</p>
+          <p id="gasSpent">0.14 ETH (~$42)</p>
         </div>
         <div class="card dark">
           <h3>Connected dApps</h3>
-          <ul>
+          <ul id="connectedDapps">
             <li>Zora</li>
             <li>OpenSea</li>
             <li>Base</li>
@@ -111,17 +111,17 @@
         </div>
         <div class="card dark">
           <h3>🎨 NFT Mint History</h3>
-          <ul style="text-align:left; padding-left:1rem; font-size:0.75rem; line-height:1.5;">
+          <ul id="nftHistory" style="text-align:left; padding-left:1rem; font-size:0.75rem; line-height:1.5;">
             <li><strong>BaseBuddies #024</strong> – 0.02 ETH – Zora</li>
             <li><strong>MintQuest #7</strong> – Free – Base</li>
             <li><strong>OnchainSticker</strong> – 0.004 ETH – Optimism</li>
           </ul>
-          <button style="margin-top:0.5rem;">View Full History</button>
+          <button id="viewHistoryBtn">View Full History</button>
         </div>
       </div>
     </section>
 
-    <section class="tab-content" style="display:none;">
+    <section class="tab-content rewards" data-tab="rewards">
       <div class="hero">
         <h2>🎁 Rewards & XP</h2>
         <p class="subtitle">Boost your journey and earn daily perks</p>
@@ -130,14 +130,14 @@
         <div class="card full earn">
           <h3>🚀 Earn More WAI</h3>
           <p>Share the app and invite friends to earn WarpAi Tokens.</p>
-          <button onclick="copyReferral()">Copy Referral Link</button>
-          <button onclick="shareOnX()">Share on X</button>
-          <button onclick="shareOnFarcaster()">Share on Farcaster</button>
+          <button id="copyReferralBtn">Copy Referral Link</button>
+          <button id="shareOnXBtn">Share on X</button>
+          <button id="shareOnFarcasterBtn">Share on Farcaster</button>
         </div>
       </div>
     </section>
 
-    <section class="tab-content" style="display:none;">
+    <section class="tab-content premium" data-tab="premium">
       <div class="hero">
         <h2>💎 Premium Tools</h2>
         <p class="subtitle">Upgrade to unlock full features</p>
@@ -162,13 +162,13 @@
         <div class="card full dark">
           <h3>🔍 Followed Wallets <span style="color:orange;">(Premium)</span></h3>
           <p style="font-size: 0.9rem;">See recent activity for wallets you follow</p>
-          <ul style="text-align: left; font-size: 0.75rem; padding-left: 1rem;">
+          <ul id="followedWallets" style="text-align: left; font-size: 0.75rem; padding-left: 1rem;">
             <li><strong>0xFanArt.eth</strong> – Minted on Zora</li>
             <li><strong>0xCollector42</strong> – Bought token on OpenSea</li>
             <li><strong>0xAIHunter</strong> – Bridged 0.5 ETH to Base</li>
           </ul>
           <div style="margin-top: 0.5rem;">
-            <button disabled style="opacity:0.6; cursor: not-allowed;">➕ Add Wallet (Premium)</button>
+            <button id="addWalletBtn" disabled style="opacity:0.6; cursor: not-allowed;">➕ Add Wallet (Premium)</button>
           </div>
         </div>
         <div class="card full highlighted-premium" style="margin-top: 1rem;">
@@ -180,12 +180,12 @@
             <li>⛽ Analyze gas across dApps</li>
             <li>📦 Get full claim history & reports</li>
           </ul>
-          <button class="upgrade-button-green">Upgrade Now</button>
+          <button id="upgradeBtn" class="upgrade-button-green">Upgrade Now</button>
         </div>
       </div>
     </section>
 
-    <section class="tab-content" style="display:none;">
+    <section class="tab-content profile" data-tab="profile">
       <div class="hero">
         <h2>👤 My Profile</h2>
         <p class="subtitle">Account overview & referral bonuses</p>
@@ -194,27 +194,27 @@
         <div class="card dark">
           <h3>Wallet</h3>
           <p id="walletAddress">Not Connected</p>
-          <p>Total XP: <strong>87</strong></p>
+          <p>Total XP: <strong id="totalXP">87</strong></p>
         </div>
         <div class="card dark">
           <h3>WarpAi Token</h3>
-          <p>Balance: 342.50 WAI</p>
+          <p id="waiBalance">Balance: 342.50 WAI</p>
           <p>Level Bonus: 10%</p>
         </div>
         <div class="card dark">
           <h3>Claim Token</h3>
           <p>Reward: 5 WAI</p>
-          <button>Claim</button>
+          <button id="claimTokenBtn">Claim</button>
         </div>
         <div class="card dark">
           <h3>Share Link</h3>
           <p>Earn 5 WAI per share</p>
-          <button onclick="shareOnFarcaster()">Share on Farcaster</button>
-          <button onclick="shareOnX()">Share on X</button>
+          <button id="shareFarcasterBtn">Share on Farcaster</button>
+          <button id="shareXBtn">Share on X</button>
         </div>
         <div class="card full premium">
           <h3>📦 Claim History</h3>
-          <ul>
+          <ul id="claimHistory">
             <li>+5 WAI – shared on X</li>
             <li>+5 WAI – referred friend</li>
             <li>+10 WAI – weekly login</li>
